# openapi-gen

./: .gitignore  Cargo.toml  SPEC.md
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/data/: import.rs  info.rs  mod.rs  parameter.rs  path.rs  request_body.rs  response.rs  schema.rs  tag.rs
parser/src/parser/: enum_definition.rs  identifier.rs  import_statement.rs  info_definition.rs  literals.rs  mod.rs  object_definition.rs  parameter_definition.rs  path_definition.rs  request_body_definition.rs  response_definition.rs  schema_definition.rs  tag_definition.rs  value.rs  with_attributes.rs
parser/src/parser/parameter_definition/: full.rs  parameters.rs  shorthand.rs
parser/src/parser/path_definition/: operation.rs
sample/: main.oai  request_body.oai  response.oai  schema.oai  tag.oai
src/: main.rs
src/converter/: mod.rs  object.rs  path.rs  request_body.rs  response.rs  schema.rs
src/openapi/: mod.rs
