[workspace]
members = ["parser"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
parser = { path = "parser" }

nom = "7.1.3"
serde = "1.0.197"
log = "0.4.21"

[package]
name = "openapi-gen"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
parser.workspace = true
serde = { workspace = true, features = ["derive"] }
log.workspace = true

serde_json = "1.0.115"
serde_yaml = "0.9.33"

env_logger = "0.11.3"
